# cakeMP

./: .gitignore  CakeMP.sln  Readme.md  StrawberryPie.sln
CakeMP/: Build.h  CakeMP.vcxproj  CakeMP.vcxproj.filters  Common.h  Licenses.txt  main.cpp
CakeMP/Entities/: LocalPlayer.cpp  LocalPlayer.h  Ped.cpp  Ped.h  Player.cpp  Player.h  Vehicle.cpp  Vehicle.h
CakeMP/Enums/: AudioFlags.h
CakeMP/GTA/: Scaleform.h  ScriptCam.cpp  ScriptCam.h
CakeMP/GTA/UI/: Menu.cpp  MenuItemCheckable.cpp  MenuItemCheckable.h  Text.cpp  Text.h  Texture.h  UI.cpp
CakeMP/Libs/inih/: ini.cpp
CakeMP/Libs/scratch2/: s2ref.h
CakeMP/Network/: NetworkManager.cpp  NetworkManager.h  PlayerInfo.h
CakeMP/Scripts/: Game.cpp  Game.h
CakeMP/System/: Cake.cpp  Cake.h  CakeDiscord.cpp  CakeDiscord.h  Entity.cpp  Entity.h  Settings.h
CakeMP/System/Interface/: Chat.cpp  Chat.h  FPSCounter.h  Interface.cpp  Interface.h  MainMenu.cpp
CakeMP/Utils/: AppMem.h  Interval.h  Logging.cpp  Models.cpp  Parsing.h  Sounds.h
CakeMPEmu/: Common.h  Makefile
CakeMPServer/: CMakeLists.txt
CakeMPServer/src/: Common.h  GameServer.h  Logging.cpp  Logging.h  Settings.h  main.cpp
CakeMPServer/src/Entities/: Player.cpp  Player.h  Vehicle.cpp
CakeMPServer/src/Network/: NetworkManager.cpp  NetworkManager.h
CakeMPServer/src/World/: Entity.cpp  Entity.h  World.h
CakeMPServer/src/World/Queries/: Range.cpp  Range.h
CakeMPShared/: CakeMPShared.vcxitems  Octree.h
CakeMPShared/Enums/: NetworkMessageType.h
CakeMPShared/Network/: NetworkEntityType.h
CakeMPShared/Network/Structs/: CreatePed.h
Libs/ScriptHookV/include/shv/: natives.h
StrawberryPie/: Build.h  Chat.cpp  Chat.h  Common.cpp  Common.h  GameScripts.h  Memory.cpp  Memory.h  Strawberry.cpp  Strawberry.h  StrawberryPie.vcxproj  StrawberryPie.vcxproj.filters  Utils.cpp  Utils.h  main.cpp
StrawberryPie/Entities/: LocalPlayer.cpp  LocalPlayer.h  Ped.cpp  Ped.h  Player.cpp  Player.h  Vehicle.cpp  Vehicle.h
StrawberryPie/Enums/: AudioFlags.h  GameControl.h  GameScripts.h  OnFootMoveTypes.h
StrawberryPie/GTA/: Scaleform.cpp
StrawberryPie/GTA/UI/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuItemCheckable.cpp  Text.cpp  Text.h  Texture.cpp  Texture.h  UI.cpp  UI.h
StrawberryPie/Libs/inih/: ini.h
StrawberryPie/Network/: NetworkManager.cpp  NetworkManager.h
StrawberryPie/Scripts/: CleanWorld.cpp  CleanWorld.h  Game.cpp  Game.h
StrawberryPie/System/: Chat.cpp  Chat.h  Entity.cpp  Entity.h  FPSCounter.cpp  FPSCounter.h  Interpolator.h  Interval.h  Settings.cpp  Settings.h  Strawberry.cpp  Strawberry.h
StrawberryPie/System/Interface/: Chat.cpp  Chat.h  FPSCounter.cpp  Interface.cpp  Interface.h  MainMenu.cpp  MainMenu.h
StrawberryPie/Utils/: AppMem.cpp  AppMem.h  Average.h  Formatting.cpp  Formatting.h  Logging.cpp  Models.h  Parsing.cpp  Sounds.cpp
StrawberryPieEmu/: Common.h  EmuClient.cpp  Makefile  StrawberryPieEmu.vcxproj  StrawberryPieEmu.vcxproj.filters
StrawberryPieServer/: CMakeLists.txt  StrawberryPieServer.vcxproj  StrawberryPieServer.vcxproj.filters  main.cpp
StrawberryPieServer/src/: Common.h  Entity.cpp  Entity.h  GameServer.cpp  GameServer.h  Logging.cpp  Settings.cpp  Settings.h  World.cpp  World.h  main.cpp
StrawberryPieServer/src/Entities/: Player.cpp  Player.h  Vehicle.cpp  Vehicle.h
StrawberryPieServer/src/Network/: NetworkManager.cpp  NetworkManager.h  NetworkMessage.cpp  NetworkMessage.h  Player.cpp  Player.h
StrawberryPieServer/src/World/: Entity.cpp  Entity.h  World.cpp  World.h
StrawberryPieServer/src/World/Queries/: Range.cpp  Range.h
StrawberryPieShared/: Octree.h  RefCounted.h  SharedUtils.h  StrawberryPieShared.vcxitems
StrawberryPieShared/Enums/: NetworkMessageType.h
StrawberryPieShared/Network/: NetHandle.h  NetworkMessage.h
StrawberryPieShared/Network/Structs/: CreatePed.h  CreateVehicle.h
